[gd_scene load_steps=15 format=3 uid="uid://dh52t2wg2uvey"]

[ext_resource type="Script" path="res://addons/godot_inheritance_dock/inheritance_dock.gd" id="1"]
[ext_resource type="Script" path="res://addons/godot_inheritance_dock/color_controlled_button.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dy2t0rlemx062" path="res://addons/godot_inheritance_dock/icons/icon_search.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://b787scarau4rm" path="res://addons/godot_inheritance_dock/icons/icon_new.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://bcudy7s1k11bf" path="res://addons/godot_inheritance_dock/icons/icon_script_create.svg" id="6"]
[ext_resource type="Texture2D" uid="uid://cg2wsoyx13b6c" path="res://addons/godot_inheritance_dock/icons/icon_extend.svg" id="7"]
[ext_resource type="Texture2D" uid="uid://bbx1i10wa5hly" path="res://addons/godot_inheritance_dock/icons/icon_instance.svg" id="8"]
[ext_resource type="Texture2D" uid="uid://b48uk7tocv5at" path="res://addons/godot_inheritance_dock/icons/icon_filesystem.svg" id="9"]
[ext_resource type="Texture2D" uid="uid://c14coyyy142w0" path="res://addons/godot_inheritance_dock/icons/icon_filter.svg" id="10"]

[sub_resource type="CanvasItemMaterial" id="1"]

[sub_resource type="CanvasItemMaterial" id="2"]

[sub_resource type="CanvasItemMaterial" id="3"]

[sub_resource type="CanvasItemMaterial" id="4"]

[sub_resource type="CanvasItemMaterial" id="5"]

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_left = 440.0
offset_top = 207.0
offset_right = 954.0
offset_bottom = 405.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0

[node name="TypeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Scenes" type="Button" parent="VBoxContainer/TypeContainer"]
self_modulate = Color(0.329412, 0.717647, 0.905882, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_pressed = true
text = "Scenes"
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TypeContainer"]
layout_mode = 2

[node name="Scripts" type="Button" parent="VBoxContainer/TypeContainer"]
self_modulate = Color(0.329412, 0.717647, 0.905882, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_pressed = true
text = "Scripts"
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TypeContainer"]
layout_mode = 2

[node name="Resources" type="Button" parent="VBoxContainer/TypeContainer"]
self_modulate = Color(0.329412, 0.717647, 0.905882, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_pressed = true
text = "Resources"
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="SearchContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SearchContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filter scenes"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
texture = ExtResource("4")
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 0

[node name="ToolContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Adds the selected script to the Scene dock's selected node."
theme_override_constants/separation = -6

[node name="NewFileButton" type="Button" parent="VBoxContainer/HBoxContainer/ToolContainer"]
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
disabled = true
icon = ExtResource("5")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="AddScriptButton" type="Button" parent="VBoxContainer/HBoxContainer/ToolContainer"]
self_modulate = Color(0.5, 0.5, 0.5, 1)
material = SubResource("1")
layout_mode = 2
disabled = true
icon = ExtResource("6")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="ExtendButton" type="Button" parent="VBoxContainer/HBoxContainer/ToolContainer"]
material = SubResource("2")
layout_mode = 2
tooltip_text = "Extends this object with a new type that inherits the selected object."
icon = ExtResource("7")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="InstanceButton" type="Button" parent="VBoxContainer/HBoxContainer/ToolContainer"]
material = SubResource("3")
layout_mode = 2
tooltip_text = "Instances this object under the Scene dock's selected node.
Disabled for non-Node scripts and non-scene resources."
icon = ExtResource("8")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="FindButton" type="Button" parent="VBoxContainer/HBoxContainer/ToolContainer"]
self_modulate = Color(0.329412, 0.717647, 0.905882, 1)
material = SubResource("4")
layout_mode = 2
tooltip_text = "Reveal this resource in the FileSystem dock."
icon = ExtResource("9")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -3

[node name="FilterMenuButton" type="Button" parent="VBoxContainer/HBoxContainer/FilterContainer"]
self_modulate = Color(0.329412, 0.717647, 0.905882, 1)
material = SubResource("5")
layout_mode = 2
icon = ExtResource("10")
flat = true
script = ExtResource("3")
pressed_color = Color(0.329412, 0.717647, 0.905882, 1)
use_material_pressed = false

[node name="ClassFilterEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filter by class"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
tab_alignment = 1
tabs_visible = false

[node name="Scenes" type="Tree" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="Scripts" type="Tree" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Resources" type="Tree" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
